--- a/UnoCPP/UnoCPP.vcxproj.filters
+++ b/UnoCPP/UnoCPP.vcxproj.filters
@@ -63,10 +63,16 @@
     <ClCompile Include="view\text_view.cpp">
       <Filter>Source Files\view</Filter>
     </ClCompile>
-    <ClCompile Include="controller\text_controller.cpp">
+    <ClCompile Include="controller\controller.cpp">
       <Filter>Source Files\controller</Filter>
     </ClCompile>
-    <ClCompile Include="LobbyManager.cpp">
+    <ClCompile Include="controller\tcp_server.cpp">
+      <Filter>Source Files\controller</Filter>
+    </ClCompile>
+    <ClCompile Include="controller\command.cpp">
+      <Filter>Source Files\controller</Filter>
+    </ClCompile>
+    <ClCompile Include="models\lobby_manager.cpp">
       <Filter>Source Files\model</Filter>
     </ClCompile>
   </ItemGroup>
@@ -110,8 +116,8 @@
     <ClInclude Include="tcp_server.h">
       <Filter>Header Files\controller</Filter>
     </ClInclude>
-    <ClInclude Include="LobbyManager.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="models\lobby_manager.h">
+      <Filter>Header Files\model</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
