--- a/UnoCPP/UnoCPP.vcxproj
+++ b/UnoCPP/UnoCPP.vcxproj
@@ -19,13 +19,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="controller\text_controller.cpp" />
+    <ClCompile Include="controller\command.cpp" />
+    <ClCompile Include="controller\controller.cpp" />
+    <ClCompile Include="controller\tcp_server.cpp" />
     <ClCompile Include="helpers\stringutils.cpp" />
-    <ClCompile Include="LobbyManager.cpp" />
     <ClCompile Include="models\card.cpp" />
     <ClCompile Include="models\deck.cpp" />
     <ClCompile Include="models\game_state.cpp" />
     <ClCompile Include="models\hand.cpp" />
+    <ClCompile Include="models\lobby_manager.cpp" />
     <ClCompile Include="models\player.cpp" />
     <ClCompile Include="UnoCPP.cpp" />
     <ClCompile Include="view\text_view.cpp" />
@@ -35,11 +37,11 @@
     <ClInclude Include="controller\controller.h" />
     <ClInclude Include="exceptions\exception.h" />
     <ClInclude Include="helpers\stringutils.h" />
-    <ClInclude Include="LobbyManager.h" />
     <ClInclude Include="models\card.h" />
     <ClInclude Include="models\deck.h" />
     <ClInclude Include="models\game_state.h" />
     <ClInclude Include="models\hand.h" />
+    <ClInclude Include="models\lobby_manager.h" />
     <ClInclude Include="models\models.h" />
     <ClInclude Include="models\player.h" />
     <ClInclude Include="tcp_server.h" />
