--- a/UnoCPP/UnoCPP.vcxproj.filters
+++ b/UnoCPP/UnoCPP.vcxproj.filters
@@ -113,11 +113,11 @@
     <ClInclude Include="controller\controller.h">
       <Filter>Header Files\controller</Filter>
     </ClInclude>
-    <ClInclude Include="tcp_server.h">
-      <Filter>Header Files\controller</Filter>
-    </ClInclude>
     <ClInclude Include="models\lobby_manager.h">
       <Filter>Header Files\model</Filter>
+    </ClInclude>
+    <ClInclude Include="controller\tcp_server.h">
+      <Filter>Header Files\controller</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
